// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Snapshots should match snapshot with all skins 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c0 svg {
  position: absolute;
  left: 14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: rgb(40,39,44);
  font-size: 1.3rem;
  -webkit-transition: fill 0.2s ease 0s;
  transition: fill 0.2s ease 0s;
}

.c1 {
  height: 35px;
  font-size: 14px;
  padding: 0px 1em 0px 1em;
  border-radius: 5px;
  border: 1px solid #000;
  background-color: #fff;
  color: #000;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshots should match snapshot with all skins 2`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c0 svg {
  position: absolute;
  left: 14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: rgb(40,39,44);
  font-size: 1.3rem;
  -webkit-transition: fill 0.2s ease 0s;
  transition: fill 0.2s ease 0s;
}

.c1 {
  height: 35px;
  font-size: 14px;
  padding: 0px 1em 0px 1em;
  border-radius: 5px;
  border: 1px solid #000;
  background-color: #fff;
  color: #000;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshots should match snapshot with all skins 3`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c0 svg {
  position: absolute;
  left: 14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: rgb(40,39,44);
  font-size: 1.3rem;
  -webkit-transition: fill 0.2s ease 0s;
  transition: fill 0.2s ease 0s;
}

.c1 {
  height: 35px;
  font-size: 14px;
  padding: 0px 1em 0px 1em;
  border-radius: 5px;
  border: 1px solid #000;
  background-color: #fff;
  color: #000;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> Snapshots should match snapshot with input disabled 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c0 svg {
  position: absolute;
  left: 14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: rgb(40,39,44);
  font-size: 1.3rem;
  -webkit-transition: fill 0.2s ease 0s;
  transition: fill 0.2s ease 0s;
}

.c1 {
  height: 35px;
  font-size: 14px;
  padding: 0px 1em 0px 1em;
  border-radius: 5px;
  border: 1px solid #000;
  background-color: #fff;
  color: #000;
  background-color: undefined;
  color: undefined;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      disabled=""
      type="text"
    />
  </div>
</div>
`;

exports[`<InputPassword /> Snapshots should match snapshot input password 1`] = `
.c0 {
  position: relative;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.c0 svg {
  position: absolute;
  left: 14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: rgb(40,39,44);
  font-size: 1.3rem;
  -webkit-transition: fill 0.2s ease 0s;
  transition: fill 0.2s ease 0s;
}

.c1 {
  height: 35px;
  font-size: 14px;
  padding: 0px 1em 0px 3.35em;
  border-radius: 5px;
  border: 1px solid #000;
  background-color: #fff;
  color: #000;
}

.c1:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      type="password"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      height="20"
      role="button"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="m0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
      />
    </svg>
  </div>
</div>
`;
